[tool.poetry]
name = "airbnb-python"
version = "0.1.0"
description = ""
authors = ["SamBeak <114740158+SamBeak@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
